make navbar resposnive and solved issue Navbar is not responsive 598px to 1000px #128

--- a/src/Components/Hero/Hero.css
+++ b/src/Components/Hero/Hero.css
@@ -1,6 +1,8 @@
+
+
 .hero{
     width: 100%;
-    min-height: 100vh;
+    height: 100vh;
     background: linear-gradient(rgba(8, 0, 58, 0.7), rgba(8, 0, 58, 0.7)), url('../../assets/investors.jpeg');
     background-size: cover;
     background-position: center;
@@ -31,4 +33,52 @@
 .hero-text .btn:hover{
     background-color:rgb(111, 111, 160);
     color:white;
+}
+
+
+@media only screen and (max-width: 600px){
+    .hero{
+        width: 700px;
+        height: 165vh;
+        background: linear-gradient(rgba(8, 0, 58, 0.7), rgba(8, 0, 58, 0.7)), url('../../assets/investors.jpeg');
+        background-size: cover;
+        background-position: center;
+        color: #fff;
+        display: flex;
+        align-items: center;
+        justify-content: center;
+    }
+
+    .hero-text{
+        text-align: center;
+        width: 400px;
+        height: 400px;
+        
+        
+       
+    }
+
+    .hero-text h1{
+        font-size: 80px;
+        font-weight: 600;
+        margin-left: -30px;
+    }
+    
+    .hero-text p{
+        width: 400px;
+        margin: 10px auto 20px;
+        line-height: 1.4;
+        font-size: 22px;
+        margin-top: 20px;
+    }
+
+    .hero-text button{
+        width: 200px;
+        height: 90px;
+        font-size: 20px;
+        font-weight: bold;
+        margin-top: 20px;
+    }
+
+
 }
